manifests/val-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "netpolicyvalidator.nyctonid.dev"
webhooks:
- name: "netpolicyvalidator.nyctonid.dev"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["UPDATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "netpolcon"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZRekNDQXl1Z0F3SUJBZ0lVTzRpbEFBZ2hNMVFXWVJEdCtMUHJsbEhKUXhvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0lERWVNQndHQTFVRUF3d1ZibVYwY0c5c1kyOXVMbVJsWm1GMWJIUXVjM1pqTUI0WERUSXpNREl5TnpFdwpNamd6T0ZvWERUSTBNREl5TnpFd01qZ3pPRm93SURFZU1Cd0dBMVVFQXd3VmJtVjBjRzlzWTI5dUxtUmxabUYxCmJIUXVjM1pqTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FnOEFNSUlDQ2dLQ0FnRUFzNVIxeEprcGFBaEQKa0JjYnlwQmVTOE8wbUcwa0RxVUw0TWJLb1JnMnVKcHl3TDgyZ0ZxSGczUW9QQm9VREl5cXBwMXk2U1dRbzlvTgowYTNEVVRUdlU5N [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5

# validatingwebhookconfigurations
